tests/int/deps_command/snapshots/integration__int__deps_command__cycles__should_cycles_dot_for_cycles_fixture.snap
---
source: tests/int/deps_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - deps
    - "--cycles"
    - "-f"
    - dot
---
success: true
exit_code: 0
----- stdout -----
digraph dependencies {
    rankdir=LR;
    node [shape=box, style=rounded, fontname="monospace", fontsize=10];
    edge [color="#444444"];

    subgraph cluster_cycle_1 {
        label="cycle 1 (3 modules)";
        style=dashed;
        color="#e67700";
        fontcolor="#e67700";
        "alpha";
        "beta";
        "gamma";
    }

    subgraph cluster_cycle_2 {
        label="cycle 2 (2 modules)";
        style=dashed;
        color="#e67700";
        fontcolor="#e67700";
        "nest";
        "nest::inner";
    }

    "alpha" -> "beta" [color="#e67700", style=bold, penwidth=2.0];
    "beta" -> "gamma" [color="#e67700", style=bold, penwidth=2.0];
    "gamma" -> "alpha" [color="#e67700", style=bold, penwidth=2.0];
    "nest" -> "nest::inner" [color="#e67700", style=bold, penwidth=2.0];
    "nest::inner" -> "nest" [color="#e67700", style=bold, penwidth=2.0];
}

----- stderr -----
