tests/int/deps_command/snapshots/integration__int__deps_command__cycles__should_cycles_highlight_warning_plain.snap
---
source: tests/int/deps_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - deps
    - "--cycles"
    - highlight
    - "-f"
    - plain
---
success: true
exit_code: 0
----- stdout -----
cycle 1 (3 modules)
  alpha -> beta
  beta -> gamma
  gamma -> alpha

cycle 2 (2 modules)
  nest -> nest::inner
  nest::inner -> nest

----- stderr -----
warning: --cycles highlight has no effect with plain format, showing cycles only
