tests/int/deps_command/snapshots/integration__int__deps_command__cycles__should_cycles_plain_for_cycles_fixture.snap
---
source: tests/int/deps_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - deps
    - "--cycles"
---
success: true
exit_code: 0
----- stdout -----
cycle 1 (3 modules)
  alpha -> beta
  beta -> gamma
  gamma -> alpha

cycle 2 (2 modules)
  nest -> nest::inner
  nest::inner -> nest

----- stderr -----
