tests/int/deps_command/snapshots/integration__int__deps_command__cycles__should_cycles_with_show_apis_for_cycles_fixture.snap
---
source: tests/int/deps_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - deps
    - "--cycles"
    - "--show-apis"
---
success: true
exit_code: 0
----- stdout -----
cycle 1 (3 modules)
  alpha -> beta [BetaType]
  beta -> gamma [GammaType]
  gamma -> alpha [AlphaType]

cycle 2 (2 modules)
  nest -> nest::inner [InnerType]
  nest::inner -> nest [NestType]

----- stderr -----
