tests/int/deps_command/snapshots/integration__int__deps_command__cycles__should_no_cycles_for_own_crate.snap
---
source: tests/int/deps_command/cycles.rs
info:
  program: crawk
  args:
    - deps
    - "--cycles"
---
success: true
exit_code: 0
----- stdout -----
cycle 1 (3 modules)
  rules -> rules::eval
  rules -> rules::load
  rules::eval -> rules
  rules::load -> rules

----- stderr -----
